--- a/package.json
+++ b/package.json
@@ -8,5 +8,14 @@
     "start": "node server.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "http": "0.0.1-security",
+    "mongodb": "^3.6.2",
+    "path": "^0.12.7"
+  }
 }
